fix gap for footer links

--- a/app/styles/components/Footer.module.scss
+++ b/app/styles/components/Footer.module.scss
@@ -42,6 +42,8 @@
     max-width: 78em;
     margin: 0 auto;
     background-color: $secondary-color; 
+    gap: 2em;
+
 }
 .footerLinksItem{
     align-items: center;
